BUG: 113033

Fix S&S indentation for colons.

svn path=/branches/KDE/3.5/kdelibs/; revision=576681